<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_files"
        android:title="@string/menu_files"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_reload"
        android:title="@string/menu_reload"
        android:icon="@android:drawable/ic_menu_rotate"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_rename"
        android:title="@string/action_rename"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
</menu>
